Updated form details to include other methods

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg)$": "<rootDir>testFolder/__mocks__/fileMock.js"
+      "\\.(jpg)$": "<rootDir>/__mocks__/fileMock.js"
     }
   }
 }
