--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "practise-react-with-me",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack -w",
-    "start": "node server.js",
+    "start": "concurrently \"webpack -w\" \"node server.js\"",
     "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/godfreydoo/practise-react-with-me.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Godfrey Doo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/godfreydoo/practise-react-with-me/issues"
   },
   "homepage": "https://github.com/godfreydoo/practise-react-with-me#readme",
   "dependencies": {
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
