Add html report for jest and update API example

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "jest": "^27.0.4",
+    "jest-html-reporters": "^2.1.6",
     "style-loader": "^2.0.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
@@ -42,6 +43,10 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    },
+    "reporters": [
+      "default",
+      "jest-html-reporters"
+    ]
   }
 }
